fixed regexp in post class and post_info layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -97,14 +97,10 @@ hr.hr_style:after {
   background: white;
 }
 
-input {
-  padding: 5px;
-}
-
 div {
   font-family: "Gill Sans", sans-serif;
   font-weight: lighter;
-  text-transform: none;
+  text-transform: none
 }
 div.welcome {
   text-align: right;
@@ -124,7 +120,7 @@ div#login_box {
   font-weight: lighter;
   text-transform: none;
   display: inline;
-  padding: 10px;
+  padding: 20px;
   margin: 10px 10px 30px 0;
   border-top: 1px dotted #8AFFFF;
   border-bottom: 1px dotted #8AFFFF;
@@ -156,8 +152,9 @@ div#login_page {
 }
 
 div.post_info {
-  margin: 0 0 30px 10px;
+  margin: 26px 0 30px 10px;
   text-align: center;
+  font-size: 17px;
 }
 div.post_navigation {
   margin: 15px 0;
@@ -204,7 +201,7 @@ span#login_button {
 }
 
 span.username_feed {
-  font-size: 12px;
+  font-size: 17px;
   font-style: oblique;
 }
 
@@ -223,6 +220,7 @@ span.title {
   text-transform: uppercase;
   font-weight: lighter;
   margin: 0 0 20px 0;
+  font-size:18px;
 }
 
 span.main_menu {
@@ -234,3 +232,9 @@ div.post_content {
   text-align: center;
   margin: 0 20px;
 }
+
+/*div#header_image {
+  position: fixed;
+  text-align: center;
+  background: #fff
+}*/
